Berg image toegevoegd

--- a/test.html
+++ b/test.html
@@ -1,3 +1,19 @@
-<h1> Hey i am a big heading </h1>
-<p>Hey i am paragraph element</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">click me!</a>
+<!DOCTYPE html>
+<<!DOCTYPE html>
+<html>
+	<title>Test Page</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+</head>
+<body>
+	<h1> Hey i am a big heading </h1>
+	<p>Hey i am <b>paragraph</b> element</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google">click me!</a>
+	<p>My name is <br>Manaslu</p>
+	<img src="img/manaslu.jpg">
+
+</body>
+
+</html>
